--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="assets/img/logo.png" class="img-fluid" />
+          <img
+            src="assets/img/logo.png"
+            alt="Logo de Olivia Ros, el cual es el nombre Olivia Ros en letras blancas "
+            class="img-fluid"
+          />
         </a>
         <button
           class="navbar-toggler"
