--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
             <button class="btn btn-lg btn-outline-info text-light me-4">
               Trabajos
             </button>
-            <button class="btn btn-lg btn-info text-light">Contacto</button>
+            <button class="btn btn-lg btn-outline-info text-light me-4">
+              Contacto
+            </button>
           </div>
         </div>
       </div>
